<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/change_securityinfo">
        <PreferenceScreen
            app:key="reset_password"
            app:title="@string/change_password" />


        <SwitchPreference
            app:defaultValue="true"
            app:key="hide_first_name"
            app:summary="@string/hide_first_name_summary"
            app:title="@string/hide_first_name_title" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="not_login"
            app:summary="@string/not_login_summary"
            app:title="@string/not_login_title" />

    </PreferenceCategory>

</PreferenceScreen>