<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <PreferenceScreen
            app:key="account_detail"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <PreferenceScreen
            app:key="remove_account"
            app:defaultValue="true"
            app:title="@string/remove_account" />

        <ListPreference
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:defaultValue="2"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">
        <PreferenceScreen
            app:key="security_info"
            app:title="@string/title_securityinfo"/>

    </PreferenceCategory>

</PreferenceScreen>